# shout

./: .gitignore  AUTO_UPDATES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
features/: README.md  grpc-support.md
src/: App.tsx  index.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodeSnippetDialog.tsx  CollectionRunner.tsx  CommandPalette.tsx  CookieJar.tsx  CookiePanel.tsx  EnvironmentModal.tsx  ImportModal.tsx  JsonEditor.tsx  KeyValueEditor.tsx  RequestPanel.tsx  ResponsePanel.tsx  SettingsModal.tsx  ShortcutsModal.tsx  Sidebar.tsx  SsePanel.tsx  TabBar.tsx  ThemePicker.tsx  UpdateBanner.tsx  VarText.tsx  WsPanel.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/hooks/: useTheme.ts  useUpdater.ts
src/store/: useStore.ts
src/types/: index.ts
src/utils/: cookies.ts  curlParser.ts  envVars.ts  exportCollection.ts  extraction.ts  fuzzy.ts  http.ts  importInsomnia.ts  importPostman.ts  jsonHighlight.ts  jwt.ts  openapi.ts  xmlFormat.ts
